# tuxpkg

./: .gitignore  .gitlab-ci.yml  Dockerfile.ci-archlinux  Dockerfile.ci-debian  Dockerfile.ci-fedora  Makefile  README.md  gitlab-ci-build-packages.yml  gitlab-ci-pipeline.yml  mkdocs.yml  pyproject.toml  tuxpkg.PKGBUILD  tuxpkg.spec
.github/workflows/: tuxpkg.yml
debian/: changelog  control
docs/: install-arch.md  install-deb.md  install-pypi.md  install-rpm.md  run-uninstalled.md  subcommands.md
scripts/: readme2index.sh
test/: test_actions.py  test_main.py
tuxpkg/: __init__.py  __main__.py  actions.py  create_repository.py  release.py
tuxpkg/data/: check-repository-key  create-repository  init.sh  release  tuxpkg.mk
tuxpkg/data/init/: .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.jinja2  Dockerfile.ci-archlinux  Dockerfile.ci-debian  Dockerfile.ci-fedora  Makefile.jinja2  README.md.jinja2  {{project}}.PKGBUILD.jinja2  {{project}}.spec.jinja2
tuxpkg/data/init/.github/workflows/: ci.yml.jinja2
tuxpkg/data/init/debian/: changelog.jinja2  control.jinja2  rules.jinja2
tuxpkg/data/init/test/: test_{{project}}.py.jinja2
tuxpkg/data/init/{{project}}/: __init__.py.jinja2
