[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tuxpkg"
author = "Antonio Terceiro"
author-email = "antonio.terceiro@linaro.org"
home-page = "https://gitlab.com/Linaro/tuxpkg"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = [
    "jinja2",
]

[tool.flit.scripts]
tuxpkg = "tuxpkg.__main__:main"
